feat: add initial-sql property (#105)